--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,21 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="app_primary_color">#4286F5</color>
+    <color name="app_primary_color_dark">#3367D5</color>
+    <color name="app_color_background">#FFF</color>
+
+    <color name="black">#000000</color>
+    <color name="background_gray">#f2f2f2</color>
+    <color name="yellow">#FFCC00</color>
+    <color name="orange">#f87a27</color>
+    <color name="blue">#0f73ab</color>
+    <color name="blue1">#FF52BEFF</color>
+    <color name="gray">#e1e1e1</color>
+    <color name="lightGrey">#ffe0e0e0</color>
+    <color name="green">#218300</color>
+    <color name="pink">#ff6666</color>
+    <color name="red">#d90c09</color>
+    <color name="white">#FFF</color>
 </resources>
