--- a/app/src/main/res/layout/draw_menu_item_holder.xml
+++ b/app/src/main/res/layout/draw_menu_item_holder.xml
@@ -6,6 +6,7 @@
     >
 
     <View
+        android:layout_marginLeft="15dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentTop="true"
@@ -22,15 +23,14 @@
         android:textColor="@color/black"
         android:textSize="15sp"/>
 
-    <TextView
+    <ImageView
         android:id="@+id/tv_tag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_gravity="right"
         android:layout_marginRight="15dp"
-        android:text="权益详情"
-        android:textColor="@color/black"
-        android:textSize="13dp"/>
+     android:src="@mipmap/menu_arrow"
+        />
 </RelativeLayout>
