--- a/app/src/main/res/layout/draw_menu_layout.xml
+++ b/app/src/main/res/layout/draw_menu_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="280dp"
+             android:layout_width="225dp"
              android:layout_height="match_parent"
              android:layout_gravity="start"
              android:clickable="true"
@@ -27,8 +27,8 @@
                 android:id="@+id/id_draw_menu_item_backup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="88dp"
                 android:gravity="center"
                 android:text="abyss"
                 android:textColor="@android:color/white"
@@ -40,7 +40,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/id_draw_menu_item_backup"
                 android:layout_marginLeft="20dp"
+                android:layout_marginTop="9dp"
                 android:text="13588432197"
+                android:drawablePadding="6dp"
+                android:drawableLeft="@mipmap/menu_phone"
                 android:textColor="@android:color/white"
                 android:textSize="15sp"/>
 
