--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
 
     <style name="AppTheme.Base" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/app_primary_color</item>
-        <item name="colorPrimaryDark">@color/app_primary_color_dark</item>
+        <item name="colorPrimaryDark">@color/app_primary_color</item>
         <item name="android:windowBackground">@color/app_color_background</item>
         <item name="windowActionModeOverlay">true</item>
         <item name="actionModeStyle">@style/ActionMode</item>
