--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,6 +12,7 @@
     android:gravity="center_vertical"
     android:layout_height="90dp">
     <LinearLayout
+        android:id="@+id/ll_rich_scan"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
@@ -30,6 +31,8 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_write_form"
+
         android:layout_width="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
@@ -48,6 +51,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_internal_reports"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
@@ -66,6 +70,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_main_query"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
