--- a/app/src/main/res/layout/logout_dialog_view.xml
+++ b/app/src/main/res/layout/logout_dialog_view.xml
@@ -13,6 +13,7 @@
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="提醒"
+                  android:paddingTop="19dp"
                   android:layout_gravity="center_horizontal"
                   android:textSize="18sp"
                   android:textColor="@color/TC_1"/>
