--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,6 +27,7 @@
             android:layout_width="wrap_content"
             android:gravity="center"
             android:text="扫一扫"
+            android:textColor="@color/white"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
@@ -47,6 +48,7 @@
             android:layout_width="wrap_content"
             android:gravity="center"
             android:text="表单填报"
+            android:textColor="@color/white"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
@@ -66,6 +68,7 @@
             android:layout_width="wrap_content"
             android:gravity="center"
             android:text="内部报事"
+            android:textColor="@color/white"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
@@ -85,6 +88,7 @@
             android:layout_width="wrap_content"
             android:gravity="center"
             android:text="查询"
+            android:textColor="@color/white"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
