--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="gray">#e1e1e1</color>
     <color name="lightGrey">#ffe0e0e0</color>
     <color name="green">#218300</color>
+    <color name="chartreuse">#7fff00</color>
     <color name="pink">#ff6666</color>
     <color name="red">#d90c09</color>
     <color name="white">#FFF</color>
