--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="colorPrimaryDark">@color/app_primary_color</item>
         <item name="android:windowBackground">@color/app_color_background</item>
         <item name="windowActionModeOverlay">true</item>
+        <item name="android:textColor">@color/TC_1</item>
         <item name="actionModeStyle">@style/ActionMode</item>
     </style>
 
