--- a/app/src/main/res/layout/draw_menu_item_holder.xml
+++ b/app/src/main/res/layout/draw_menu_item_holder.xml
@@ -3,8 +3,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/white"
+                android:descendantFocusability="blocksDescendants"
 >
-
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
