登录模块找回密码，重置密码完成

--- a/app/src/main/res/layout/fragment_retrieve_password.xml
+++ b/app/src/main/res/layout/fragment_retrieve_password.xml
@@ -20,8 +20,8 @@
                 android:id="@+id/et_phone_num"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="47dp"
-                android:layout_marginRight="47dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
                 android:layout_marginTop="40dp"
                 android:background="@drawable/bg_edittext_normal_shape"
                 android:drawableLeft="@mipmap/phone_icon"
@@ -35,15 +35,17 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/BC_1"
                 android:textSize="15sp"/>
-            <RelativeLayout android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="47dp"
-                            android:layout_marginRight="47dp"
-                            android:layout_marginTop="15dp"
-                            android:background="@drawable/bg_edittext_normal_shape">
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:layout_marginLeft="40dp"
+                          android:layout_marginRight="40dp"
+                          android:layout_marginTop="15dp"
+                          android:background="@drawable/bg_edittext_normal_shape"
+                          android:orientation="horizontal">
                 <EditText
                     android:id="@+id/et_auth_code"
-                    android:layout_width="fill_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="5"
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:drawableLeft="@mipmap/lock_icon"
@@ -57,29 +59,27 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/BC_1"
                     android:textSize="15sp"/>
+
+                <View android:layout_width="1dp" android:layout_height="20dp"
+                      android:layout_gravity="center_vertical"
+                      android:background="@color/BC_1"
+                />
                 <TextView
                     android:id="@+id/tv_send_auth_code"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
                     android:layout_height="match_parent"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
                     android:gravity="center"
-                    android:padding="@dimen/dp_10"
                     android:text="发送验证码"
                     android:textColor="@color/app_primary_color"
                     android:textSize="13sp"
                 />
-                <View android:layout_width="1dp" android:layout_height="20dp"
-                      android:layout_centerVertical="true"
-                      android:layout_toLeftOf="@id/tv_send_auth_code"
-                      android:background="@color/BC_1"
-                />
-            </RelativeLayout>
+            </LinearLayout>
 
             <RelativeLayout android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="47dp"
-                            android:layout_marginRight="47dp"
+                            android:layout_marginLeft="40dp"
+                            android:layout_marginRight="40dp"
                             android:layout_marginTop="12dp">
 
                 <TextView
@@ -100,8 +100,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="47dp"
-                android:layout_marginRight="47dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
                 android:layout_marginTop="25dp"
                 android:background="@drawable/login_login_button_selector"
                 android:gravity="center"
