--- a/app/src/main/res/layout/base_progress_view.xml
+++ b/app/src/main/res/layout/base_progress_view.xml
@@ -19,6 +19,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="6dp"
-        android:text="@string/loading"
+        android:text="@string/loading_text"
         android:textColor="@color/TC_1"/>
 </LinearLayout>
