--- a/app/src/main/res/layout/fragment_reset_passwrod.xml
+++ b/app/src/main/res/layout/fragment_reset_passwrod.xml
@@ -14,14 +14,14 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-        <TextView android:layout_width="wrap_content"
-                  android:text="请输入您的新密码："
-                  android:layout_marginLeft="47dp"
-                  android:layout_marginRight="47dp"
-                  android:layout_marginTop="40dp"
-                  android:textColor="@color/TC_1"
-                  android:textSize="15sp"
-                  android:layout_height="wrap_content"/>
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="47dp"
+                      android:layout_marginRight="47dp"
+                      android:layout_marginTop="40dp"
+                      android:text="请输入您的新密码："
+                      android:textColor="@color/TC_1"
+                      android:textSize="15sp"/>
 
 
             <RelativeLayout android:layout_width="match_parent"
@@ -34,10 +34,10 @@
                     android:id="@+id/et_new_passwrod"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="@null"
                     android:drawableLeft="@mipmap/lock_icon"
                     android:drawablePadding="10dp"
                     android:hint="数字、字母和符号的组合"
-                    android:background="@null"
                     android:inputType="textPassword"
                     android:paddingBottom="10dp"
                     android:paddingLeft="10dp"
@@ -70,6 +70,7 @@
                     android:text="@string/pwd_format_error"
                     android:textColor="@color/TC_3"
                     android:textSize="13sp"
+                    android:visibility="invisible"
                 />
             </RelativeLayout>
 
