--- a/app/src/main/res/layout/fragment_inner_reports_detail.xml
+++ b/app/src/main/res/layout/fragment_inner_reports_detail.xml
@@ -23,9 +23,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="abyss"
+                android:id="@+id/tv_name"
                 android:textColor="@color/TC_1"
                 android:textSize="15sp"/>
             <TextView
+                android:id="@+id/tv_department_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -47,45 +49,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="15dp"
-                android:text="内部报事"
+                android:text="报事内容"
                 android:textColor="@color/TC_2"
                 android:textSize="15sp"/>
             <View android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@color/background_gray"/>
             <TextView
-                android:layout_marginTop="13dp"
+                android:id="@+id/tv_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="13dp"
                 android:text="文字描述:"
-                android:textColor="@color/TC_1"
-                android:textSize="15sp"/>
-            <EditText
-                android:id="@+id/et_content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginTop="7dp"
-                android:background="@color/background_gray"
-                android:gravity="start"
-                android:hint="请尽量清晰地描述出您的问题，以便物业工作人员安排解决您的投诉。"
-                android:minLines="5"
-                android:textColor="@color/TC_1"
-                android:paddingBottom="7dp"
-                android:paddingLeft="11dp"
-                android:paddingRight="11dp"
-                android:paddingTop="7dp"
-                android:textColorHint="#cccccc"
-                android:textSize="13sp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="7dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="13dp"
-                android:text="现场图片:"
                 android:textColor="@color/TC_1"
                 android:textSize="15sp"/>
             <LinearLayout
@@ -95,38 +71,42 @@
                 android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/iv_add1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/add_photo_icon"/>
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:visibility="gone"
+                    android:src="@mipmap/default_logo"/>
                 <ImageView
                     android:id="@+id/iv_add2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginLeft="5dp"
-                    android:src="@drawable/add_photo_icon"/>
+                    android:visibility="gone"
+                    android:src="@mipmap/default_logo"/>
                 <ImageView
                     android:id="@+id/iv_add3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_marginLeft="5dp"
-                    android:src="@drawable/add_photo_icon"/>
+                    android:visibility="gone"
+                    android:src="@mipmap/default_logo"/>
             </LinearLayout>
 
         </LinearLayout>
         <Button
-            android:id="@+id/loginBt"
+            android:id="@+id/statusBt"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="30dp"
+            android:clickable="false"
             android:background="@drawable/login_login_button_selector"
             android:gravity="center"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="提交"
+            android:text="状态"
             android:textColor="@color/white"
             android:textSize="15sp"/>
     </LinearLayout>
