--- a/app/src/main/res/layout/fragment_inner_reports.xml
+++ b/app/src/main/res/layout/fragment_inner_reports.xml
@@ -20,12 +20,14 @@
             android:paddingLeft="15sp"
             android:paddingTop="20dp">
             <TextView
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="abyss"
                 android:textColor="@color/TC_1"
                 android:textSize="15sp"/>
             <TextView
+                android:id="@+id/tv_department_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -54,10 +56,10 @@
                   android:layout_height="1dp"
                   android:background="@color/background_gray"/>
             <TextView
-                android:layout_marginTop="13dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="13dp"
                 android:text="文字描述:"
                 android:textColor="@color/TC_1"
                 android:textSize="15sp"/>
@@ -72,11 +74,11 @@
                 android:gravity="start"
                 android:hint="请尽量清晰地描述出您的问题，以便物业工作人员安排解决您的投诉。"
                 android:minLines="5"
-                android:textColor="@color/TC_1"
                 android:paddingBottom="7dp"
                 android:paddingLeft="11dp"
                 android:paddingRight="11dp"
                 android:paddingTop="7dp"
+                android:textColor="@color/TC_1"
                 android:textColorHint="#cccccc"
                 android:textSize="13sp"/>
             <TextView
@@ -88,29 +90,10 @@
                 android:text="现场图片:"
                 android:textColor="@color/TC_1"
                 android:textSize="15sp"/>
-            <LinearLayout
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/iv_add1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/add_photo_icon"/>
-                <ImageView
-                    android:id="@+id/iv_add2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:src="@drawable/add_photo_icon"/>
-                <ImageView
-                    android:id="@+id/iv_add3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:src="@drawable/add_photo_icon"/>
-            </LinearLayout>
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
         <Button
@@ -118,6 +101,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="30dp"
@@ -125,7 +109,6 @@
             android:gravity="center"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
-            android:layout_marginBottom="10dp"
             android:text="提交"
             android:textColor="@color/white"
             android:textSize="15sp"/>
