--- a/app/src/main/res/layout/fragment_inner_reports.xml
+++ b/app/src/main/res/layout/fragment_inner_reports.xml
@@ -92,8 +92,9 @@
                 android:textSize="15sp"/>
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"/>
 
         </LinearLayout>
         <Button
