--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -4,32 +4,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_gray"
-    android:orientation="vertical"
->
+    android:orientation="vertical">
+
     <include layout="@layout/base_toolbar"/>
-    <View android:layout_width="match_parent"
-          android:background="@color/background_gray"
-          android:layout_height="10dp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/background_gray"/>
+
     <include
         android:id="@+id/setting_item1"
         layout="@layout/draw_menu_item_holder"/>
+
     <include
         android:id="@+id/setting_item2"
         layout="@layout/draw_menu_item_holder"/>
-    <LinearLayout android:id="@+id/setting_logout"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_marginTop="60dp"
-                  android:background="@color/white"
-                  android:gravity="center"
-                  android:orientation="horizontal"
-    >
+
+    <LinearLayout
+        android:id="@+id/setting_logout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:background="@color/white"
+        android:gravity="center"
+        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="13dp"
             android:paddingBottom="13dp"
+            android:paddingTop="13dp"
             android:text="退出登录"
             android:textColor="@color/TC_3"
             android:textSize="15sp"/>
