--- a/app/src/main/res/layout/fragment_inner_reports_detail.xml
+++ b/app/src/main/res/layout/fragment_inner_reports_detail.xml
@@ -73,10 +73,12 @@
                     android:id="@+id/iv_add1"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
+                    android:scaleType="centerCrop"
                     android:visibility="gone"
                     android:src="@mipmap/default_logo"/>
                 <ImageView
                     android:id="@+id/iv_add2"
+                    android:scaleType="centerCrop"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_marginLeft="5dp"
@@ -84,6 +86,7 @@
                     android:src="@mipmap/default_logo"/>
                 <ImageView
                     android:id="@+id/iv_add3"
+                    android:scaleType="centerCrop"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:layout_marginLeft="5dp"
