--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -40,6 +40,7 @@
                 android:layout_marginLeft="47dp"
                 android:layout_marginRight="47dp"
                 android:layout_marginTop="40dp"
+                android:inputType="number"
                 android:background="@drawable/bg_edittext_normal_shape"
                 android:drawableLeft="@mipmap/phone_icon"
                 android:drawablePadding="10dp"
