--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,12 +2,12 @@
 
     <!-- Base application theme. -->
     <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
-        <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
-        <!--<item name="colorPrimary">@color/colorPrimary</item>-->
-        <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
-        <!--<item name="colorAccent">@color/colorAccent</item>-->
+    <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+    <!--<item name="colorPrimary">@color/colorPrimary</item>-->
+    <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+    <!--<item name="colorAccent">@color/colorAccent</item>-->
     <!--</style>-->
-    <style name="ToolBarTheme" parent="AppTheme.Base" />
+    <style name="ToolBarTheme" parent="AppTheme.Base"/>
 
     <style name="AppTheme.Base" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/app_primary_color</item>
@@ -26,5 +26,26 @@
     <style name="PopupMenu" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:colorBackground">@color/app_color_background</item>
         <item name="android:textColor">@color/app_primary_color_dark</item>
+    </style>
+
+    <style name="TabLayoutStyle" parent="Widget.Design.TabLayout">
+        <!--指示横线的颜色-->
+        <item name="tabIndicatorColor">@color/app_primary_color</item>
+        <!--指示横线的高度-->
+        <item name="tabIndicatorHeight">2dp</item>
+        <!--选中的文字颜色-->
+        <item name="tabSelectedTextColor">@color/app_primary_color</item>
+        <!--tab字体样式-->
+        <item name="tabTextAppearance">@style/TabTextStyle</item>
+        <!--指示器的背景颜色-->
+        <item name="tabBackground">@color/white</item>
+    </style>
+
+    <style name="TabTextStyle" parent="TextAppearance.Design.Tab">
+        <!--文字大小-->
+        <item name="android:textSize">13sp</item>
+        <!--未选中的文字颜色-->
+        <item name="android:textColor">@color/TC_2</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
