--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -6,102 +6,105 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.tianchuang.ihome_b.activity.ChangePasswordActivity">
-<LinearLayout android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical"
-              android:paddingRight="48dp"
->
+    tools:context="com.tianchuang.ihome_b.activity.ModifyPasswordActivity">
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:layout_marginTop="40dp"
-                  android:gravity="right"
-                  android:orientation="horizontal">
-        <TextView android:layout_width="wrap_content"
-                  android:gravity="right"
-                  android:layout_height="wrap_content"
-                  android:text="原密码"
-                  android:textColor="@color/black"
-                  android:textSize="15sp"/>
-        <EditText
-            android:id="@+id/et_old_passwrod"
-            android:layout_width="230dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="14dp"
-            android:background="@drawable/bg_edittext_normal_shape"
-            android:drawablePadding="10dp"
-            android:hint="请输入原密码"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="5dp"
-            android:paddingTop="10dp"
-            android:singleLine="true"
-            android:textColor="@color/black"
-            android:textColorHint="@color/BC_1"
-            android:textSize="15sp"
-        />
-    </LinearLayout>
+                  android:orientation="vertical"
+                  android:paddingRight="48dp"
+    >
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginTop="40dp"
+                      android:gravity="right"
+                      android:orientation="horizontal">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:gravity="right"
+                      android:text="原密码"
+                      android:textColor="@color/black"
+                      android:textSize="15sp"/>
+            <EditText
+                android:id="@+id/et_old_passwrod"
+                android:layout_width="230dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:background="@drawable/bg_edittext_normal_shape"
+                android:drawablePadding="10dp"
+                android:hint="请输入原密码"
+                android:inputType="textPassword"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                android:paddingTop="10dp"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="@color/BC_1"
+                android:textSize="15sp"
+            />
+        </LinearLayout>
 
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_marginTop="15dp"
-                  android:gravity="right"
-                  android:orientation="horizontal">
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="新密码"
-                  android:gravity="right"
-                  android:textColor="@color/black"
-                  android:textSize="15sp"/>
-        <EditText
-            android:id="@+id/et_new_passwrod"
-            android:layout_width="230dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="14dp"
-            android:background="@drawable/bg_edittext_normal_shape"
-            android:drawablePadding="10dp"
-            android:hint="请输入新密码"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="5dp"
-            android:paddingTop="10dp"
-            android:singleLine="true"
-            android:textColor="@color/black"
-            android:textColorHint="@color/BC_1"
-            android:textSize="15sp"
-        />
-    </LinearLayout>
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginTop="15dp"
+                      android:gravity="right"
+                      android:orientation="horizontal">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:gravity="right"
+                      android:text="新密码"
+                      android:textColor="@color/black"
+                      android:textSize="15sp"/>
+            <EditText
+                android:id="@+id/et_new_passwrod"
+                android:layout_width="230dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:background="@drawable/bg_edittext_normal_shape"
+                android:drawablePadding="10dp"
+                android:hint="请输入新密码"
+                android:inputType="textPassword"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                android:paddingTop="10dp"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="@color/BC_1"
+                android:textSize="15sp"
+            />
+        </LinearLayout>
 
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_marginTop="15dp"
-                  android:gravity="right"
-                  android:orientation="horizontal">
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="确认密码"
-                  android:gravity="right"
-                  android:textColor="@color/black"
-                  android:textSize="15sp"/>
-        <EditText
-            android:id="@+id/et_sure_passwrod"
-            android:layout_width="230dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="14dp"
-            android:background="@drawable/bg_edittext_normal_shape"
-            android:drawablePadding="10dp"
-            android:hint="请再一次输入新密码"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="5dp"
-            android:paddingTop="10dp"
-            android:singleLine="true"
-            android:textColor="@color/black"
-            android:textColorHint="@color/BC_1"
-            android:textSize="15sp"
-        />
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginTop="15dp"
+                      android:gravity="right"
+                      android:orientation="horizontal">
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:gravity="right"
+                      android:text="确认密码"
+                      android:textColor="@color/black"
+                      android:textSize="15sp"/>
+            <EditText
+                android:id="@+id/et_sure_passwrod"
+                android:layout_width="230dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:background="@drawable/bg_edittext_normal_shape"
+                android:drawablePadding="10dp"
+                android:hint="请再一次输入新密码"
+                android:inputType="textPassword"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                android:paddingTop="10dp"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="@color/BC_1"
+                android:textSize="15sp"
+            />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
 
     <RelativeLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
