我的订单列表，设备列表

--- a/app/src/main/res/layout/multi_detail_footer_holder2.xml
+++ b/app/src/main/res/layout/multi_detail_footer_holder2.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@color/background_gray"
     android:orientation="vertical"
+    android:paddingBottom="10dp"
 >
     <!--<View-->
     <!--android:layout_width="match_parent"-->
