--- a/app/src/main/res/layout/building_search_item_holder.xml
+++ b/app/src/main/res/layout/building_search_item_holder.xml
@@ -8,18 +8,19 @@
     android:orientation="horizontal"
 >
     <TextView
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
         android:id="@+id/tv_building_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
         android:text="分区:"
         android:textColor="@color/TC_1"
         android:textSize="13sp"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_list"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="3"
         android:overScrollMode="never"
         android:scrollbars="none"/>
 
