--- a/app/src/main/res/layout/multi_detail_footer_holder.xml
+++ b/app/src/main/res/layout/multi_detail_footer_holder.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
+    android:paddingBottom="5dp"
 >
     <View
         android:layout_width="match_parent"
