--- a/app/src/main/res/layout/data_search_type_item_holder.xml
+++ b/app/src/main/res/layout/data_search_type_item_holder.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="10dp"
     app:cardElevation="0px"
     app:cardMaxElevation="2px"
-    app:cardUseCompatPadding="false"
->
+    app:cardUseCompatPadding="false">
+
     <TextView
         android:id="@+id/tv_title"
+        style="@style/normal_content_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:paddingBottom="25dp"
         android:paddingTop="25dp"
-        android:text="会员权益"
-        android:textColor="@color/black"
-        android:textSize="15sp"/>
+        android:text="会员权益" />
 
     <ImageView
         android:id="@+id/tv_tag"
@@ -26,6 +25,5 @@
         android:layout_height="12dp"
         android:layout_gravity="center_vertical|right"
         android:layout_marginRight="15dp"
-        android:src="@mipmap/menu_arrow"
-    />
+        android:src="@mipmap/menu_arrow" />
 </android.support.v7.widget.CardView>
