--- a/app/src/main/res/layout/recyclerview_item_layout.xml
+++ b/app/src/main/res/layout/recyclerview_item_layout.xml
@@ -10,8 +10,8 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
         <LinearLayout android:layout_width="match_parent"
-                      android:orientation="horizontal"
-                      android:layout_height="match_parent">
+                      android:layout_height="match_parent"
+                      android:orientation="horizontal">
             <TextView
                 android:id="@+id/item_content"
                 android:layout_width="wrap_content"
@@ -27,8 +27,8 @@
                 android:layout_height="match_parent"
                 android:gravity="right|center_vertical"
                 android:paddingLeft="15dp"
-                android:text="￥100"
                 android:paddingRight="15dp"
+                android:text="￥100"
                 android:textColor="#000000"
                 android:textSize="15sp"/>
 
