--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <color name="pink">#ff6666</color>
     <color name="red">#d90c09</color>
     <color name="white">#FFF</color>
+    <color name="white_2">#ccffffff</color>
+    <color name="white_3">#19ffffff</color>
     <!--按钮颜色-->
     <color name="BC_1">#cccccc</color>
     <!--文字颜色-->
